--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
       </div>
 
       <!--glyphicons  -->
-      <div class="glyphicons">
-          <div class="row">
+      <!-- <div class="glyphicons"> -->
+          <!-- <div class="row">
              <span class="glyphicon glyphicon-knight" aria-hidden="true"></span> Knight
              <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> Evenlope
           </div>
 
-      </div>
+      </div> -->
 
 <!--Image and Quote - 1 row, two columns  -->
 
     <div class="row">
         <div class="col-md-6">
-          <img class="img-responsive" src="images/msgiphy.gif
+          <img class="img-responsive, img-thumbnail" src="images/msgiphy.gif
 " alt="Michael Scott">
         </div>
                 <div class="col-md-6">
@@ -48,42 +48,65 @@
                   </blockquote>
                   </div>
 
-
       </div>
 
+<!--Start of the floated image with text -->
+<div class="row">
+
+      <img class="img-responsive, pull-right" src="images/officecast.jpg" alt="The office Cast">
+      <p>From Wikipedia: The Office is an American television comedy series that aired on NBC from March 24, 2005 to May 16, 2013.[1] It is an adaptation of the BBC series of the same name. The Office was adapted for American audiences by Greg Daniels, a veteran writer for Saturday Night Live, King of the Hill, and The Simpsons. It is co-produced by Daniels' Deedle-Dee Productions, and Reveille Productions (later Shine America), in association with Universal Television. The original executive producers were Greg Daniels, Howard Klein, Ben Silverman, Ricky Gervais, and Stephen Merchant, with numerous others being promoted in later seasons.
+
+The series depicts the everyday lives of office employees in the Scranton, Pennsylvania, branch of the fictional Dunder Mifflin Paper Company. To simulate the look of an actual documentary, it is filmed in a single-camera setup, without a studio audience or a laugh track. The show debuted on NBC as a mid-season replacement and ran for nine seasons and 201 episodes. The Office initially featured Steve Carell, Rainn Wilson, John Krasinski, Jenna Fischer and B. J. Novak as the main cast; the show experienced numerous changes to its ensemble cast during its run.
+
+The first season of The Office was met with mixed reviews, but the following four seasons received widespread acclaim from television critics. These seasons were included on several critics' year-end top TV series lists, winning several awards including four Primetime Emmy Awards, including Outstanding Comedy Series in 2006. While later seasons were criticized for a decline in quality, earlier writers oversaw the final season and ended the show's run with a positive reception.</p>
+
+    </div>
 
 
+<!--Two videos: bootstrap or pick your favorite character  -->
 
+  <div class="row">
+      <div class="col-md-4">
+        <iframe class="embed-responsive-item" src="http://nbc.com/the-office/video/dream-team/n21833"></iframe>
 
+      </div>
+<!--  Pick your favorite character-->
+      <div class="col-md-8">
+<h2>Who is your favorite character!?</h2>
+        <div class="radio">
+            <label>
+              <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1">
+              Dwight Schrute
+
+            </label>
+          </div>
+          <div class="radio2">
+            <label>
+              <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
+              Michael Scott
+            </label>
+
+          </div>
+          <div class="radio disabled">
+            <label>
+              <input type="radio" name="optionsRadios" id="optionsRadios3" value="option3" disabled>
+              Jim Halpert
+            </label>
+            </div>
+            <!--button  -->
+<button type="button" class="btn btn-primary btn-lg btn-block">Submit</button>
+
+            </div>
+          </div>
+<!--Footer  -->
+  <footer class="navbar-fixed-bottom">
+    <p> Stephanie McIlroy <span class="glyphicon glyphicon-copyright-mark"</span> 2017
+      <a class="mail" href="mailto:stephanie.mcilroy@gmail.com">Send mail</a>
 
   </div>
 
 
+</div>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-</body>
     </html>
